--- a/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
+++ b/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".AirQuiality">
 
@@ -18,10 +18,68 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/linearChar"/>-->
-   <com.github.mikephil.charting.charts.BarChart
-       android:id="@+id/barChart"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_weight="1" />
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/barChart"
+        android:layout_width="400dp"
+        android:layout_height="350dp"
+        android:layout_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-</LinearLayout>
+   <androidx.cardview.widget.CardView
+       android:id="@+id/cvinfopastelchart"
+       android:layout_width="match_parent"
+       android:layout_height="100dp"
+       android:layout_marginTop="10dp"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/barChart">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+           <TextView
+               android:id="@+id/txttextgi"
+               android:layout_width="30dp"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="80dp"
+               android:background="#d32f2f" />
+           <TextView
+               android:id="@+id/txtmqgasinterno"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginRight="20dp"
+               android:text="0.0"
+               android:textColor="@color/black"
+               android:textSize="40dp" />
+           <TextView
+               android:id="@+id/txttextge"
+               android:layout_width="30dp"
+               android:layout_marginLeft="40dp"
+               android:layout_height="wrap_content"
+               android:background="#ff5722" />
+           <TextView
+               android:id="@+id/txtmqgasexterno"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginRight="20dp"
+               android:text="0.0"
+               android:textColor="@color/black"
+               android:textSize="40dp" />
+       </LinearLayout>
+
+
+   </androidx.cardview.widget.CardView>
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/Pastelchart"
+        android:layout_width="400dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cvinfopastelchart" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
